- Refactoring -> rename column component to grid

--- a/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
+++ b/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
@@ -1,14 +1,15 @@
-bootstrap4compoments.columns.absolute.area.desc= Define area for level {0}.
-bootstrap4compoments.columns.absolute.area.title=Absolute Area
-bootstrap4compoments.columns.couldNotDisplayGrid=Could not display custom grid {0}.
-bootstrap4compoments.columns.warning=Warning !
+bootstrap4nt_grid.absolute.area.desc= Define area for level {0}.
+bootstrap4nt_grid.absolute.area.title=Absolute Area
+bootstrap4nt_grid.couldNotDisplayGrid=Could not display custom grid {0}.
+bootstrap4nt_grid.warning=Warning !
+bootstrap4mix_createAbsoluteAreas=Create absolute areas
 bootstrap4mix_createAbsoluteAreas.level.0=0 - Home page
 bootstrap4mix_createAbsoluteAreas.level.1=1
 bootstrap4mix_createAbsoluteAreas.level.2=2
 bootstrap4mix_createAbsoluteAreas.level.3=3
 bootstrap4mix_createAbsoluteAreas.level.4=4
 bootstrap4mix_createAbsoluteAreas.level.5=5
-bootstrap4mix_createAbsoluteAreas.level=Level
+bootstrap4mix_createAbsoluteAreas.level=Choose level
 bootstrap4mix_createContainer=Create Container
 bootstrap4mix_createContainer.containerCssClass=Class(es) set on this container
 bootstrap4mix_createContainer.containerCssClass.ui.tooltip=Optional
@@ -48,24 +49,24 @@ bootstrap4mix_createSection.sectionElement.section=section
 bootstrap4mix_createSection.sectionId=ID set on this HTML element
 bootstrap4mix_createSection.sectionId.ui.tooltip=Optional
 bootstrap4mix_createSection.sectionRole=Role
-bootstrap4mix_customColumns=Custom
-bootstrap4mix_customColumns.gridClasses=Set of grid classes
-bootstrap4mix_customColumns.gridClasses.ui.tooltip=Separate classes with coma
-bootstrap4mix_predefinedColumns=Predefined
-bootstrap4mix_predefinedColumns.grid.10_2=10 / 2
-bootstrap4mix_predefinedColumns.grid.12=12
-bootstrap4mix_predefinedColumns.grid.2_10=2 / 10
-bootstrap4mix_predefinedColumns.grid.3_3_3_3=3 / 3 / 3 / 3
-bootstrap4mix_predefinedColumns.grid.3_6_3=3 / 6 / 3
-bootstrap4mix_predefinedColumns.grid.3_9=3 / 9
-bootstrap4mix_predefinedColumns.grid.4_4_4=4 / 4 / 4
-bootstrap4mix_predefinedColumns.grid.4_8=4 / 8
-bootstrap4mix_predefinedColumns.grid.6_6=6 / 6
-bootstrap4mix_predefinedColumns.grid.8_4=8 / 4
-bootstrap4mix_predefinedColumns.grid.9_3=9 / 3
-bootstrap4mix_predefinedColumns.grid=Grid
-bootstrap4nt_columns=Grid
-bootstrap4nt_columns.columnsType=Type
-bootstrap4nt_columns.columnsType.customColumns=Custom
-bootstrap4nt_columns.columnsType.nogrid=No grid
-bootstrap4nt_columns.columnsType.predefinedColumns=Predefined
+bootstrap4mix_customGrid=Custom
+bootstrap4mix_customGrid.gridClasses=Set of grid classes
+bootstrap4mix_customGrid.gridClasses.ui.tooltip=Separate classes with coma
+bootstrap4mix_predefinedGrid=Predefined
+bootstrap4mix_predefinedGrid.grid.10_2=10 / 2
+bootstrap4mix_predefinedGrid.grid.12=12
+bootstrap4mix_predefinedGrid.grid.2_10=2 / 10
+bootstrap4mix_predefinedGrid.grid.3_3_3_3=3 / 3 / 3 / 3
+bootstrap4mix_predefinedGrid.grid.3_6_3=3 / 6 / 3
+bootstrap4mix_predefinedGrid.grid.3_9=3 / 9
+bootstrap4mix_predefinedGrid.grid.4_4_4=4 / 4 / 4
+bootstrap4mix_predefinedGrid.grid.4_8=4 / 8
+bootstrap4mix_predefinedGrid.grid.6_6=6 / 6
+bootstrap4mix_predefinedGrid.grid.8_4=8 / 4
+bootstrap4mix_predefinedGrid.grid.9_3=9 / 3
+bootstrap4mix_predefinedGrid.grid=Select a predifined grid
+bootstrap4nt_grid=Grid
+bootstrap4nt_grid.gridType=Type
+bootstrap4nt_grid.gridType.customGrid=Custom
+bootstrap4nt_grid.gridType.nogrid=No grid
+bootstrap4nt_grid.gridType.predefinedGrid=Predefined
