Add media object component and some usefulle mixin (image, padding, margin)

--- a/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
+++ b/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
@@ -1,7 +1,3 @@
-bootstrap4nt_grid.absolute.area.desc= Define area for level {0}.
-bootstrap4nt_grid.absolute.area.title=Absolute Area
-bootstrap4nt_grid.couldNotDisplayGrid=Could not display custom grid {0}.
-bootstrap4nt_grid.warning=Warning !
 bootstrap4mix_createAbsoluteAreas=Create absolute areas
 bootstrap4mix_createAbsoluteAreas.level.0=0 - Home page
 bootstrap4mix_createAbsoluteAreas.level.1=1
@@ -31,7 +27,7 @@ bootstrap4mix_createRow.rowHorizontalAlignment.justify-content-start=Start (left
 bootstrap4mix_createRow.rowId=ID set on this row block
 bootstrap4mix_createRow.rowId.ui.tooltip=Optional
 bootstrap4mix_createRow.rowVerticalAlignment=Vertical alignment
-bootstrap4mix_createRow.rowVerticalAlignment.align-items-center=Center
+bootstrap4mix_createRow.rowVerticalAlignment.align-items-center=Middle
 bootstrap4mix_createRow.rowVerticalAlignment.align-items-end=End (bottom)
 bootstrap4mix_createRow.rowVerticalAlignment.align-items-start=Start (top)
 bootstrap4mix_createRow.rowVerticalAlignment.default=Default
@@ -52,6 +48,56 @@ bootstrap4mix_createSection.sectionRole=Role
 bootstrap4mix_customGrid=Custom
 bootstrap4mix_customGrid.gridClasses=Set of grid classes
 bootstrap4mix_customGrid.gridClasses.ui.tooltip=Separate classes with coma
+bootstrap4mix_imageAdvancedSettings=Image advanced settings
+bootstrap4mix_imageAdvancedSettings.imageClass=Class(es) to set on this image
+bootstrap4mix_imageAdvancedSettings.imageID=ID to set on this image
+bootstrap4mix_imageAdvancedSettings.imageStyle=Style(s) to set on this image
+bootstrap4mix_image=Image
+bootstrap4mix_image.image=Image
+bootstrap4mix_margin=Custom margin
+bootstrap4mix_margin.marginSize.0=0 (No margin)
+bootstrap4mix_margin.marginSize.1=0.25
+bootstrap4mix_margin.marginSize.2=0.5
+bootstrap4mix_margin.marginSize.3=1 (Default)
+bootstrap4mix_margin.marginSize.4=1.5
+bootstrap4mix_margin.marginSize.5=3
+bootstrap4mix_margin.marginSize=Size
+bootstrap4mix_margin.marginWhere = Where
+bootstrap4mix_margin.marginWhere.all=Everywhere
+bootstrap4mix_margin.marginWhere.b=Bottom
+bootstrap4mix_margin.marginWhere.l=Left
+bootstrap4mix_margin.marginWhere.r=Right
+bootstrap4mix_margin.marginWhere.t=Top
+bootstrap4mix_margin.marginWhere.x=Left and right
+bootstrap4mix_margin.marginWhere.y=Top and Bottom
+bootstrap4mix_mediaObjectAdvancedSettings=Advanced settings
+bootstrap4mix_mediaObjectAdvancedSettings.mediaObjectClass=Class(es) to set on this Media object
+bootstrap4mix_mediaObjectAdvancedSettings.mediaObjectID=ID to set on this Media object
+bootstrap4mix_mediaObjectAdvancedSettings.mediaObjectStyle=Style(s) to set on this Media object
+bootstrap4mix_mediaObjectImageAlignment=Image alignment
+bootstrap4mix_mediaObjectImageAlignment.imageHorizonralAlignment=Horizonral alignment
+bootstrap4mix_mediaObjectImageAlignment.imageHorizonralAlignment.left=Left
+bootstrap4mix_mediaObjectImageAlignment.imageHorizonralAlignment.right=Right
+bootstrap4mix_mediaObjectImageAlignment.imageVerticalAlignment=Verical alignment
+bootstrap4mix_mediaObjectImageAlignment.imageVerticalAlignment.align-self-center=Middle
+bootstrap4mix_mediaObjectImageAlignment.imageVerticalAlignment.align-self-end=End
+bootstrap4mix_mediaObjectImageAlignment.imageVerticalAlignment.align-self-start=Top
+bootstrap4mix_padding=Custom padding
+bootstrap4mix_padding.paddingSize.0=0 (No padding)
+bootstrap4mix_padding.paddingSize.1=0.25
+bootstrap4mix_padding.paddingSize.2=0.5
+bootstrap4mix_padding.paddingSize.3=1 (Default)
+bootstrap4mix_padding.paddingSize.4=1.5
+bootstrap4mix_padding.paddingSize.5=3
+bootstrap4mix_padding.paddingSize=Size
+bootstrap4mix_padding.paddingWhere = Where
+bootstrap4mix_padding.paddingWhere.all=Everywhere
+bootstrap4mix_padding.paddingWhere.b=Bottom
+bootstrap4mix_padding.paddingWhere.l=Left
+bootstrap4mix_padding.paddingWhere.r=Right
+bootstrap4mix_padding.paddingWhere.t=Top
+bootstrap4mix_padding.paddingWhere.x=Left and right
+bootstrap4mix_padding.paddingWhere.y=Top and Bottom
 bootstrap4mix_predefinedGrid=Predefined
 bootstrap4mix_predefinedGrid.grid.10_2=10 / 2
 bootstrap4mix_predefinedGrid.grid.12=12
@@ -66,7 +112,12 @@ bootstrap4mix_predefinedGrid.grid.8_4=8 / 4
 bootstrap4mix_predefinedGrid.grid.9_3=9 / 3
 bootstrap4mix_predefinedGrid.grid=Select a predifined grid
 bootstrap4nt_grid=Grid
+bootstrap4nt_grid.absolute.area.desc= Define area for level {0}.
+bootstrap4nt_grid.absolute.area.title=Absolute Area
+bootstrap4nt_grid.couldNotDisplayGrid=Could not display custom grid {0}.
 bootstrap4nt_grid.gridType=Type
 bootstrap4nt_grid.gridType.customGrid=Custom
 bootstrap4nt_grid.gridType.nogrid=No grid
 bootstrap4nt_grid.gridType.predefinedGrid=Predefined
+bootstrap4nt_grid.warning=Warning !
+bootstrap4nt_mediaObject=Media object
