Add breadcrumb, buttonm card, figure, text

--- a/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
+++ b/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
@@ -1,3 +1,4 @@
+
 bootstrap4mix_createAbsoluteAreas=Create absolute areas
 bootstrap4mix_createAbsoluteAreas.level.0=0 - Home page
 bootstrap4mix_createAbsoluteAreas.level.1=1
@@ -49,9 +50,24 @@ bootstrap4mix_customGrid=Custom
 bootstrap4mix_customGrid.gridClasses=Set of grid classes
 bootstrap4mix_customGrid.gridClasses.ui.tooltip=Separate classes with coma
 bootstrap4mix_imageAdvancedSettings=Image advanced settings
+bootstrap4mix_imageAdvancedSettings.align=Alignment
+bootstrap4mix_imageAdvancedSettings.align.center=Center
+bootstrap4mix_imageAdvancedSettings.align.default=Default
+bootstrap4mix_imageAdvancedSettings.align.left=Left
+bootstrap4mix_imageAdvancedSettings.align.right=Right
+bootstrap4mix_imageAdvancedSettings.borderRadius=Border radius
+bootstrap4mix_imageAdvancedSettings.borderRadius.rounded-0=No radius
+bootstrap4mix_imageAdvancedSettings.borderRadius.rounded=Rounded
+bootstrap4mix_imageAdvancedSettings.borderRadius.rounded-bottom=Only on nottom
+bootstrap4mix_imageAdvancedSettings.borderRadius.rounded-circle=Circle
+bootstrap4mix_imageAdvancedSettings.borderRadius.rounded-left=Only on left
+bootstrap4mix_imageAdvancedSettings.borderRadius.rounded-right=Only on right
+bootstrap4mix_imageAdvancedSettings.borderRadius.rounded-top=Only on top
 bootstrap4mix_imageAdvancedSettings.imageClass=Class(es) to set on this image
 bootstrap4mix_imageAdvancedSettings.imageID=ID to set on this image
 bootstrap4mix_imageAdvancedSettings.imageStyle=Style(s) to set on this image
+bootstrap4mix_imageAdvancedSettings.responsive=Responsive image
+bootstrap4mix_imageAdvancedSettings.thumbnails=Thumbnails
 bootstrap4mix_image=Image
 bootstrap4mix_image.image=Image
 bootstrap4mix_margin=Custom margin
@@ -121,3 +137,12 @@ bootstrap4nt_grid.gridType.nogrid=No grid
 bootstrap4nt_grid.gridType.predefinedGrid=Predefined
 bootstrap4nt_grid.warning=Warning !
 bootstrap4nt_mediaObject=Media object
+bootstrap4nt_figure=Figure
+bootstrap4nt_figure.jcr_title=Caption
+bootstrap4mix_figureAdvancedSettings=Caption alignment
+bootstrap4mix_figureAdvancedSettings.captionAlignment=Alignment
+bootstrap4mix_figureAdvancedSettings.captionAlignment.text-left=Left
+bootstrap4mix_figureAdvancedSettings.captionAlignment.text-center=Center
+bootstrap4mix_figureAdvancedSettings.captionAlignment.text-right=Right
+
+bootstrap4nt_button.readMore=Read more
