Add missing resources

--- a/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
+++ b/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
@@ -1,4 +1,46 @@
 
+bootstrap4mix_advancedPagination=Advanced settings
+bootstrap4mix_advancedPagination.align=Alignement
+bootstrap4mix_advancedPagination.align.justify-content-center=Center
+bootstrap4mix_advancedPagination.align.justify-content-end=Right
+bootstrap4mix_advancedPagination.align.justify-content-start=Left
+bootstrap4mix_advancedPagination.layout=Size
+bootstrap4mix_advancedPagination.layout.default=Default
+bootstrap4mix_advancedPagination.layout.pagination-lg=Large
+bootstrap4mix_advancedPagination.layout.pagination-sm=Small
+bootstrap4mix_advancedPagination.nbOfPages=How many items are shown
+bootstrap4mix_advancedPagination.nbOfPagesInEdit=How many items are shown (edition mode)
+bootstrap4mix_advancedPagination.next=Next
+bootstrap4mix_advancedPagination.pageSize=Size of the menu
+bootstrap4mix_advancedPagination.previous=Previous
+bootstrap4mix_buttonAdvancedSettings=Advanced settings
+bootstrap4mix_buttonAdvancedSettings.block=Full width button 
+bootstrap4mix_buttonAdvancedSettings.outline=Outline
+bootstrap4mix_buttonAdvancedSettings.size=Size
+bootstrap4mix_buttonAdvancedSettings.size.btn-lg=Large
+bootstrap4mix_buttonAdvancedSettings.size.btn-sm=Small
+bootstrap4mix_buttonAdvancedSettings.size.default=Default
+bootstrap4mix_buttonAdvancedSettings.state=State
+bootstrap4mix_buttonAdvancedSettings.state.active=Active
+bootstrap4mix_buttonAdvancedSettings.state.default=Default
+bootstrap4mix_buttonAdvancedSettings.state.disabled=Disabled
+bootstrap4mix_buttonAdvancedSettings.style=Style
+bootstrap4mix_buttonAdvancedSettings.style.danger=Danger
+bootstrap4mix_buttonAdvancedSettings.style.info=Info
+bootstrap4mix_buttonAdvancedSettings.style.link=No style (link only)
+bootstrap4mix_buttonAdvancedSettings.style.primary=Primary
+bootstrap4mix_buttonAdvancedSettings.style.secondary=Secondary
+bootstrap4mix_buttonAdvancedSettings.style.success=Success
+bootstrap4mix_buttonAdvancedSettings.style.warning=Warning
+bootstrap4mix_carouselAdvancedSettings=Advanced settings
+bootstrap4mix_carouselAdvancedSettings.interval=Delay between automatically cycling (ms)
+bootstrap4mix_carouselAdvancedSettings.keyboard=React to keyboard events
+bootstrap4mix_carouselAdvancedSettings.pause=Pauses the cycling on hover
+bootstrap4mix_carouselAdvancedSettings.ride=Autoplays the carousel
+bootstrap4mix_carouselAdvancedSettings.useIndicators=Display indicators
+bootstrap4mix_carouselAdvancedSettings.useLeftAndRightControls=Display controls
+bootstrap4mix_carouselAdvancedSettings.wrap=Cycle continuously
+bootstrap4mix_collapse=Collapse
 bootstrap4mix_createAbsoluteAreas=Create absolute areas
 bootstrap4mix_createAbsoluteAreas.level.0=0 - Home page
 bootstrap4mix_createAbsoluteAreas.level.1=1
@@ -49,6 +91,13 @@ bootstrap4mix_createSection.sectionRole=Role
 bootstrap4mix_customGrid=Custom
 bootstrap4mix_customGrid.gridClasses=Set of grid classes
 bootstrap4mix_customGrid.gridClasses.ui.tooltip=Separate classes with coma
+bootstrap4mix_externalLink=URL
+bootstrap4mix_externalLink.externalLink=URL
+bootstrap4mix_figureAdvancedSettings=Caption alignment
+bootstrap4mix_figureAdvancedSettings.captionAlignment=Alignment
+bootstrap4mix_figureAdvancedSettings.captionAlignment.text-center=Center
+bootstrap4mix_figureAdvancedSettings.captionAlignment.text-left=Left
+bootstrap4mix_figureAdvancedSettings.captionAlignment.text-right=Right
 bootstrap4mix_imageAdvancedSettings=Image advanced settings
 bootstrap4mix_imageAdvancedSettings.align=Alignment
 bootstrap4mix_imageAdvancedSettings.align.center=Center
@@ -70,6 +119,8 @@ bootstrap4mix_imageAdvancedSettings.responsive=Responsive image
 bootstrap4mix_imageAdvancedSettings.thumbnails=Thumbnails
 bootstrap4mix_image=Image
 bootstrap4mix_image.image=Image
+bootstrap4mix_internalLink=Internal link
+bootstrap4mix_internalLink.internalLink=Link to this content
 bootstrap4mix_margin=Custom margin
 bootstrap4mix_margin.marginSize.0=0 (No margin)
 bootstrap4mix_margin.marginSize.1=0.25
@@ -98,6 +149,13 @@ bootstrap4mix_mediaObjectImageAlignment.imageVerticalAlignment=Verical alignment
 bootstrap4mix_mediaObjectImageAlignment.imageVerticalAlignment.align-self-center=Middle
 bootstrap4mix_mediaObjectImageAlignment.imageVerticalAlignment.align-self-end=End
 bootstrap4mix_mediaObjectImageAlignment.imageVerticalAlignment.align-self-start=Top
+bootstrap4mix_modal=Modal
+bootstrap4mix_modal.closeText=Label for the close button
+bootstrap4mix_modal.modalSize=Size of the modal
+bootstrap4mix_modal.modalSize.default
+bootstrap4mix_modal.modalSize.lg=Large
+bootstrap4mix_modal.modalSize.sm=Small
+bootstrap4mix_modal.modalTitle=Title for the modal header
 bootstrap4mix_padding=Custom padding
 bootstrap4mix_padding.paddingSize.0=0 (No padding)
 bootstrap4mix_padding.paddingSize.1=0.25
@@ -114,6 +172,14 @@ bootstrap4mix_padding.paddingWhere.r=Right
 bootstrap4mix_padding.paddingWhere.t=Top
 bootstrap4mix_padding.paddingWhere.x=Left and right
 bootstrap4mix_padding.paddingWhere.y=Top and Bottom
+bootstrap4mix_popover=Popover
+bootstrap4mix_popover.direction=Placement
+bootstrap4mix_popover.direction.bottom=Bottom
+bootstrap4mix_popover.direction.left=Left
+bootstrap4mix_popover.direction.right=Right
+bootstrap4mix_popover.direction.top=Top
+bootstrap4mix_popover.popoverContent=Content
+bootstrap4mix_popover.popoverTitle=Title of the popover
 bootstrap4mix_predefinedGrid=Predefined
 bootstrap4mix_predefinedGrid.grid.10_2=10 / 2
 bootstrap4mix_predefinedGrid.grid.12=12
@@ -127,6 +193,37 @@ bootstrap4mix_predefinedGrid.grid.6_6=6 / 6
 bootstrap4mix_predefinedGrid.grid.8_4=8 / 4
 bootstrap4mix_predefinedGrid.grid.9_3=9 / 3
 bootstrap4mix_predefinedGrid.grid=Select a predifined grid
+bootstrap4mix_text=Text
+bootstrap4mix_text.text=Text
+bootstrap4nt_button=Button
+bootstrap4nt_button.buttonType=Action
+bootstrap4nt_button.buttonType.collapse=Collapse
+bootstrap4nt_button.buttonType.externalLink=URL
+bootstrap4nt_button.buttonType.internalLink=Internal link
+bootstrap4nt_button.buttonType.modal=Modal
+bootstrap4nt_button.buttonType.popover=Popover
+bootstrap4nt_button.close=Close
+bootstrap4nt_button.noLink=Oops: Could not found a working link for this button!
+bootstrap4nt_button.noUrl=Oops: Could not found any URL for this button!
+bootstrap4nt_button.readMore=Read more
+bootstrap4nt_card=Card
+bootstrap4nt_card.headerSize=Heading for the title
+bootstrap4nt_card.headerSize.default=Default
+bootstrap4nt_card.headerSize.h1=H1
+bootstrap4nt_card.headerSize.h2=H2
+bootstrap4nt_card.headerSize.h3=H3
+bootstrap4nt_card.headerSize.h4=H4
+bootstrap4nt_card.headerSize.h5=H5
+bootstrap4nt_card.textAlign=Alignment
+bootstrap4nt_card.textAlign.text-center=Center
+bootstrap4nt_card.textAlign.text-left=Left
+bootstrap4nt_card.textAlign.text-right=Right
+bootstrap4nt_carousel=Carousel
+bootstrap4nt_carousel.next=Next
+bootstrap4nt_carousel.previous=Previous
+bootstrap4nt_displayPager=Display the pagination
+bootstrap4nt_figure=Figure
+bootstrap4nt_figure.jcr_title=Caption
 bootstrap4nt_grid=Grid
 bootstrap4nt_grid.absolute.area.desc= Define area for level {0}.
 bootstrap4nt_grid.absolute.area.title=Absolute Area
@@ -137,12 +234,5 @@ bootstrap4nt_grid.gridType.nogrid=No grid
 bootstrap4nt_grid.gridType.predefinedGrid=Predefined
 bootstrap4nt_grid.warning=Warning !
 bootstrap4nt_mediaObject=Media object
-bootstrap4nt_figure=Figure
-bootstrap4nt_figure.jcr_title=Caption
-bootstrap4mix_figureAdvancedSettings=Caption alignment
-bootstrap4mix_figureAdvancedSettings.captionAlignment=Alignment
-bootstrap4mix_figureAdvancedSettings.captionAlignment.text-left=Left
-bootstrap4mix_figureAdvancedSettings.captionAlignment.text-center=Center
-bootstrap4mix_figureAdvancedSettings.captionAlignment.text-right=Right
-
-bootstrap4nt_button.readMore=Read more
+bootstrap4nt_pagination=Pagination
+bootstrap4nt_text=Text
