--- a/bootstrap4-core/pom.xml
+++ b/bootstrap4-core/pom.xml
@@ -63,7 +63,7 @@
     <tag>HEAD</tag>
   </scm>
   <properties>
-    <jahia-depends>default,jquery,tether</jahia-depends>
+    <jahia-depends>default,jquery,popperjs</jahia-depends>
   </properties>
   <repositories>
     <repository>
