Updates for beta version

--- a/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
+++ b/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
@@ -223,7 +223,9 @@ bootstrap4mix_buttonAdvancedSettings.style.success=Success
 bootstrap4mix_buttonAdvancedSettings.style.secondary=Secondary
 bootstrap4mix_buttonAdvancedSettings.style.primary=Primary
 bootstrap4mix_buttonAdvancedSettings.style.link=No style (link only)
+bootstrap4mix_buttonAdvancedSettings.style.light=Light
 bootstrap4mix_buttonAdvancedSettings.style.info=Info
+bootstrap4mix_buttonAdvancedSettings.style.dark=Dark
 bootstrap4mix_buttonAdvancedSettings.style.danger=Danger
 bootstrap4mix_buttonAdvancedSettings.style=Style
 bootstrap4mix_buttonAdvancedSettings.state.disabled=Disabled
@@ -252,4 +254,6 @@ bootstrap4mix_advancedPagination.align.justify-content-center=Center
 bootstrap4mix_advancedPagination.align=Alignement
 bootstrap4mix_advancedPagination=Advanced settings
 bootstrap4mix_advancedNavbar.navClass=Class(es) to set on this navbar
+bootstrap4mix_advancedNavbar.brandText=Brand text
+bootstrap4mix_advancedNavbar.brandImage= Brand image
 bootstrap4mix_advancedNavbar=Advanced settings
