- Add custom CSS for button - Fix on custom grid - Add new custom CSS for nav menu

--- a/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
+++ b/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
@@ -227,6 +227,7 @@ bootstrap4mix_buttonAdvancedSettings.style.light=Light
 bootstrap4mix_buttonAdvancedSettings.style.info=Info
 bootstrap4mix_buttonAdvancedSettings.style.dark=Dark
 bootstrap4mix_buttonAdvancedSettings.style.danger=Danger
+bootstrap4mix_buttonAdvancedSettings.style.custom=Custom (Custom CSS only)
 bootstrap4mix_buttonAdvancedSettings.style=Style
 bootstrap4mix_buttonAdvancedSettings.state.disabled=Disabled
 bootstrap4mix_buttonAdvancedSettings.state.default=Default
@@ -237,6 +238,7 @@ bootstrap4mix_buttonAdvancedSettings.size.btn-sm=Small
 bootstrap4mix_buttonAdvancedSettings.size.btn-lg=Large
 bootstrap4mix_buttonAdvancedSettings.size=Size
 bootstrap4mix_buttonAdvancedSettings.outline=Outline
+bootstrap4mix_buttonAdvancedSettings.cssClass=Custom Class(es) to set on this button
 bootstrap4mix_buttonAdvancedSettings.block=Full width button 
 bootstrap4mix_buttonAdvancedSettings=Advanced settings
 bootstrap4mix_advancedPagination.previous=Previous
@@ -253,7 +255,10 @@ bootstrap4mix_advancedPagination.align.justify-content-end=Right
 bootstrap4mix_advancedPagination.align.justify-content-center=Center
 bootstrap4mix_advancedPagination.align=Alignement
 bootstrap4mix_advancedPagination=Advanced settings
-bootstrap4mix_advancedNavbar.navClass=Class(es) to set on this navbar
+bootstrap4mix_advancedNavbar.ulClass=Class(es) to set on the pages List (NAV>DIV>UL)
+bootstrap4mix_advancedNavbar.navClass=Class(es) to set on this navbar (NAV)
+bootstrap4mix_advancedNavbar.divClass=Class(es) to set on the navbar div (NAV>DIV)
+bootstrap4mix_advancedNavbar.buttonClass=Class(es) to set on this navbar button (NAV>BUTTON)
 bootstrap4mix_advancedNavbar.brandText=Brand text
 bootstrap4mix_advancedNavbar.brandImage= Brand image
 bootstrap4mix_advancedNavbar=Advanced settings
