Minor fix on ck config + Add style into grid section + remove duplicate container/row in class attrib

--- a/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
+++ b/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
@@ -99,6 +99,7 @@ bootstrap4mix_createSection.sectionElement.section=section
 bootstrap4mix_createSection.sectionId=ID set on this HTML element
 bootstrap4mix_createSection.sectionId.ui.tooltip=Optional
 bootstrap4mix_createSection.sectionRole=Role
+bootstrap4mix_createSection.sectionStyle=Style
 bootstrap4mix_customGrid=Custom
 bootstrap4mix_customGrid.gridClasses=Set of grid classes
 bootstrap4mix_customGrid.gridClasses.ui.tooltip=Separate classes with coma
