Add list view (basenav) for navbar and split advanced settings

--- a/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
+++ b/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
@@ -1,11 +1,6 @@
 bootstrap4mix_advancedNavbar=Advanced settings
-bootstrap4mix_advancedNavbar.brandImage=Brand image
-bootstrap4mix_advancedNavbar.brandText=Brand text
-bootstrap4mix_advancedNavbar.buttonClass=Class(es) to set on this navbar button (NAV>BUTTON)
 bootstrap4mix_advancedNavbar.divClass=Class(es) to set on the navbar div (NAV>DIV)
 bootstrap4mix_advancedNavbar.navClass=Class(es) to set on this navbar (NAV)
-bootstrap4mix_advancedNavbar.recursive=Display sub pages
-bootstrap4mix_advancedNavbar.ulClass=Class(es) to set on the pages List (NAV>DIV>UL)
 bootstrap4mix_advancedPagination=Advanced settings
 bootstrap4mix_advancedPagination.align=Alignement
 bootstrap4mix_advancedPagination.align.justify-content-center=Center
@@ -100,6 +95,13 @@ bootstrap4mix_createSection.sectionId=ID set on this HTML element
 bootstrap4mix_createSection.sectionId.ui.tooltip=Optional
 bootstrap4mix_createSection.sectionRole=Role
 bootstrap4mix_createSection.sectionStyle=Style
+bootstrap4mix_customBaseNavbar=Customize the navigation components
+bootstrap4mix_customBaseNavbar.recursive=Display sub pages
+bootstrap4mix_customBaseNavbar.ulClass=Class(es) to set on the List
+bootstrap4mix_customButtonNavbar=Customize button
+bootstrap4mix_customButtonNavbar.brandImage=Brand image
+bootstrap4mix_customButtonNavbar.brandText=Brand text
+bootstrap4mix_customButtonNavbar.buttonClass=Class(es) to set on the button
 bootstrap4mix_customGrid=Custom
 bootstrap4mix_customGrid.gridClasses=Set of grid classes
 bootstrap4mix_customGrid.gridClasses.ui.tooltip=Separate classes with coma
@@ -233,7 +235,6 @@ bootstrap4nt_card.textAlign.text-right=Right
 bootstrap4nt_carousel=Carousel
 bootstrap4nt_carousel.next=Next
 bootstrap4nt_carousel.previous=Previous
-bootstrap4nt_displayPager=Display the pagination
 bootstrap4nt_figure=Figure
 bootstrap4nt_figure.jcr_title=Caption
 bootstrap4nt_grid=Grid
@@ -252,6 +253,7 @@ bootstrap4nt_navbar.root.currentPage=Current page
 bootstrap4nt_navbar.root.homePage=Home
 bootstrap4nt_navbar.root.parentPage=Parent page
 bootstrap4nt_pagination=Pagination
+bootstrap4nt_pagination.displayPager=Display the pagination
 bootstrap4nt_tabs=Tabs and pills
 bootstrap4nt_tabs.align=Horizontal alignment
 bootstrap4nt_tabs.align.justify-content-center=Center
@@ -264,3 +266,4 @@ bootstrap4nt_tabs.type=Type
 bootstrap4nt_tabs.type.pill=Pills
 bootstrap4nt_tabs.type.tab=Tabs
 bootstrap4nt_text=Text
+jmix_renderable.j_view.basenav=Base nav (only display the UL part)
