--- a/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
+++ b/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
@@ -1,4 +1,5 @@
 bootstrap4mix_advancedNavbar=Advanced settings
+bootstrap4mix_advancedNavbar.addContainerWithinTheNavbar=Add a container within the navbar
 bootstrap4mix_advancedNavbar.divClass=Class(es) to set on the navbar div (NAV>DIV)
 bootstrap4mix_advancedNavbar.navClass=Class(es) to set on this navbar (NAV)
 bootstrap4mix_advancedPagination=Advanced settings
@@ -96,6 +97,12 @@ bootstrap4mix_createSection.sectionId.ui.tooltip=Optional
 bootstrap4mix_createSection.sectionRole=Role
 bootstrap4mix_createSection.sectionStyle=Style
 bootstrap4mix_customBaseNavbar=Customize the navigation components
+bootstrap4mix_customBaseNavbar.label.contribute=Contribute
+bootstrap4mix_customBaseNavbar.label.edit=Edit
+bootstrap4mix_customBaseNavbar.label.live=Live
+bootstrap4mix_customBaseNavbar.label.login=Login
+bootstrap4mix_customBaseNavbar.label.logout=Logout
+bootstrap4mix_customBaseNavbar.label.preview=Preview
 bootstrap4mix_customBaseNavbar.recursive=Display sub pages
 bootstrap4mix_customBaseNavbar.ulClass=Class(es) to set on the List
 bootstrap4mix_customButtonNavbar=Customize button
