[maven-release-plugin] prepare release bootstrap4-modules-0.4

--- a/bootstrap4-core/pom.xml
+++ b/bootstrap4-core/pom.xml
@@ -53,14 +53,14 @@
   </parent>
   <groupId>org.jahia.modules</groupId>
   <artifactId>bootstrap4-core</artifactId>
-  <version>0.4-SNAPSHOT</version>
+  <version>0.4</version>
   <packaging>bundle</packaging>
   <name>bootstrap4-core</name>
   <description>This is the custom module (bootstrap4-core) for running on a Digital Experience Manager server.</description>
   <scm>
     <connection>scm:dummy:uri</connection>
     <developerConnection>scm:dummy:uri</developerConnection>
-    <tag>HEAD</tag>
+    <tag>bootstrap4-modules-0.4</tag>
   </scm>
   <properties>
     <jahia-depends>default,jquery,popperjs</jahia-depends>
