--- a/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
+++ b/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
@@ -16,6 +16,15 @@ bootstrap4mix_advancedPagination.nbOfPagesInEdit=How many items are shown (editi
 bootstrap4mix_advancedPagination.next=Next
 bootstrap4mix_advancedPagination.pageSize=Size of the menu
 bootstrap4mix_advancedPagination.previous=Previous
+bootstrap4mix_border=Border
+bootstrap4mix_borderRadius.borderRadius=Border radius
+bootstrap4mix_borderRadius.borderRadius.rounded-0=No radius
+bootstrap4mix_borderRadius.borderRadius.rounded=Rounded
+bootstrap4mix_borderRadius.borderRadius.rounded-bottom=Only on bottom
+bootstrap4mix_borderRadius.borderRadius.rounded-circle=Circle
+bootstrap4mix_borderRadius.borderRadius.rounded-left=Only on left
+bootstrap4mix_borderRadius.borderRadius.rounded-right=Only on right
+bootstrap4mix_borderRadius.borderRadius.rounded-top=Only on top
 bootstrap4mix_buttonAdvancedSettings=Advanced settings
 bootstrap4mix_buttonAdvancedSettings.block=Full width button 
 bootstrap4mix_buttonAdvancedSettings.cssClass=Custom Class(es) to set on this button
@@ -48,6 +57,39 @@ bootstrap4mix_carouselAdvancedSettings.useIndicators=Display indicators
 bootstrap4mix_carouselAdvancedSettings.useLeftAndRightControls=Display controls
 bootstrap4mix_carouselAdvancedSettings.wrap=Cycle continuously
 bootstrap4mix_collapse=Collapse
+bootstrap4mix_colors=Colors
+bootstrap4mix_colors.backgroundColor=Background
+bootstrap4mix_colors.backgroundColor.danger=Danger
+bootstrap4mix_colors.backgroundColor.dark=Dark
+bootstrap4mix_colors.backgroundColor.default=Default
+bootstrap4mix_colors.backgroundColor.info=Info
+bootstrap4mix_colors.backgroundColor.light=Light
+bootstrap4mix_colors.backgroundColor.primary=Primary
+bootstrap4mix_colors.backgroundColor.secondary=Secondary
+bootstrap4mix_colors.backgroundColor.success=Success
+bootstrap4mix_colors.backgroundColor.warning=Warning
+bootstrap4mix_colors.backgroundColor.white=White
+bootstrap4mix_colors.borderColor=Border
+bootstrap4mix_colors.borderColor.danger=Danger
+bootstrap4mix_colors.borderColor.dark=Dark
+bootstrap4mix_colors.borderColor.default=Default
+bootstrap4mix_colors.borderColor.info=Info
+bootstrap4mix_colors.borderColor.light=Light
+bootstrap4mix_colors.borderColor.primary=Primary
+bootstrap4mix_colors.borderColor.secondary=Secondary
+bootstrap4mix_colors.borderColor.success=Success
+bootstrap4mix_colors.borderColor.warning=Warning
+bootstrap4mix_colors.borderColor.white=White
+bootstrap4mix_colors.textColor=Text
+bootstrap4mix_colors.textColor.danger=Danger
+bootstrap4mix_colors.textColor.dark=Dark
+bootstrap4mix_colors.textColor.default=Default
+bootstrap4mix_colors.textColor.info=Info
+bootstrap4mix_colors.textColor.light=Light
+bootstrap4mix_colors.textColor.primary=Primary
+bootstrap4mix_colors.textColor.secondary=Decondary
+bootstrap4mix_colors.textColor.success=Success
+bootstrap4mix_colors.textColor.warning=Warning
 bootstrap4mix_createAbsoluteAreas=Create absolute areas
 bootstrap4mix_createAbsoluteAreas.level.0=0 - Home page
 bootstrap4mix_createAbsoluteAreas.level.1=1
@@ -125,14 +167,6 @@ bootstrap4mix_imageAdvancedSettings.align.center=Center
 bootstrap4mix_imageAdvancedSettings.align.default=Default
 bootstrap4mix_imageAdvancedSettings.align.left=Left
 bootstrap4mix_imageAdvancedSettings.align.right=Right
-bootstrap4mix_imageAdvancedSettings.borderRadius=Border radius
-bootstrap4mix_imageAdvancedSettings.borderRadius.rounded-0=No radius
-bootstrap4mix_imageAdvancedSettings.borderRadius.rounded=Rounded
-bootstrap4mix_imageAdvancedSettings.borderRadius.rounded-bottom=Only on nottom
-bootstrap4mix_imageAdvancedSettings.borderRadius.rounded-circle=Circle
-bootstrap4mix_imageAdvancedSettings.borderRadius.rounded-left=Only on left
-bootstrap4mix_imageAdvancedSettings.borderRadius.rounded-right=Only on right
-bootstrap4mix_imageAdvancedSettings.borderRadius.rounded-top=Only on top
 bootstrap4mix_imageAdvancedSettings.imageClass=Class(es) to set on this image
 bootstrap4mix_imageAdvancedSettings.imageID=ID to set on this image
 bootstrap4mix_imageAdvancedSettings.imageStyle=Style(s) to set on this image
@@ -228,6 +262,7 @@ bootstrap4nt_button.noLink=Oops: Could not found a working link for this button!
 bootstrap4nt_button.noUrl=Oops: Could not found any URL for this button!
 bootstrap4nt_button.readMore=Read more
 bootstrap4nt_card=Card
+bootstrap4nt_card.footer=Footer
 bootstrap4nt_card.headerSize=Heading for the title
 bootstrap4nt_card.headerSize.default=Default
 bootstrap4nt_card.headerSize.h1=H1
