Set recursive nav by default Fix some RB

--- a/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
+++ b/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
@@ -16,7 +16,6 @@ bootstrap4mix_advancedPagination.nbOfPagesInEdit=How many items are shown (editi
 bootstrap4mix_advancedPagination.next=Next
 bootstrap4mix_advancedPagination.pageSize=Size of the menu
 bootstrap4mix_advancedPagination.previous=Previous
-bootstrap4mix_border=Border
 bootstrap4mix_borderRadius.borderRadius=Border radius
 bootstrap4mix_borderRadius.borderRadius.rounded-0=No radius
 bootstrap4mix_borderRadius.borderRadius.rounded=Rounded
@@ -275,6 +274,8 @@ bootstrap4nt_card.textAlign.text-center=Center
 bootstrap4nt_card.textAlign.text-left=Left
 bootstrap4nt_card.textAlign.text-right=Right
 bootstrap4nt_carousel=Carousel
+bootstrap4nt_carouselItem=Carousel item
+bootstrap4nt_carouselItem.caption=Caption
 bootstrap4nt_carousel.next=Next
 bootstrap4nt_carousel.previous=Previous
 bootstrap4nt_figure=Figure
