- Add brand text and image as a site properties - Add missing ck preview and code

--- a/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
+++ b/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
@@ -147,8 +147,9 @@ bootstrap4mix_customBaseNavbar.label.preview=Preview
 bootstrap4mix_customBaseNavbar.recursive=Display sub pages
 bootstrap4mix_customBaseNavbar.ulClass=Class(es) to set on the List
 bootstrap4mix_customButtonNavbar=Customize button
-bootstrap4mix_customButtonNavbar.brandImage=Brand image
-bootstrap4mix_customButtonNavbar.brandText=Brand text
+bootstrap4mix_siteBrand=Brand
+bootstrap4mix_brand.brandImage=Brand image
+bootstrap4mix_brand.brandText=Brand text
 bootstrap4mix_customButtonNavbar.buttonClass=Class(es) to set on the button
 bootstrap4mix_customGrid=Custom
 bootstrap4mix_customGrid.gridClasses=Set of grid classes
