--- a/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
+++ b/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
@@ -207,7 +207,7 @@ bootstrap4mix_mediaObjectImageAlignment.imageVerticalAlignment.align-self-start=
 bootstrap4mix_modal=Modal
 bootstrap4mix_modal.closeText=Label for the close button
 bootstrap4mix_modal.modalSize=Size of the modal
-bootstrap4mix_modal.modalSize.default
+bootstrap4mix_modal.modalSize.default=Default
 bootstrap4mix_modal.modalSize.lg=Large
 bootstrap4mix_modal.modalSize.sm=Small
 bootstrap4mix_modal.modalTitle=Title for the modal header
