--- a/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
+++ b/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
@@ -11,10 +11,10 @@ bootstrap4mix_advancedPagination.layout=Size
 bootstrap4mix_advancedPagination.layout.default=Default
 bootstrap4mix_advancedPagination.layout.pagination-lg=Large
 bootstrap4mix_advancedPagination.layout.pagination-sm=Small
-bootstrap4mix_advancedPagination.nbOfPages=How many items are shown
+bootstrap4mix_advancedPagination.nbOfPages=Size of the menu
 bootstrap4mix_advancedPagination.nbOfPagesInEdit=How many items are shown (edition mode)
 bootstrap4mix_advancedPagination.next=Next
-bootstrap4mix_advancedPagination.pageSize=Size of the menu
+bootstrap4mix_advancedPagination.pageSize=How many items are shown
 bootstrap4mix_advancedPagination.previous=Previous
 bootstrap4mix_borderRadius.borderRadius=Border radius
 bootstrap4mix_borderRadius.borderRadius.rounded-0=No radius
@@ -307,6 +307,7 @@ bootstrap4nt_tabs.align.nav-fill=Fill
 bootstrap4nt_tabs.align.nav-justified=Justified
 bootstrap4nt_tabs.fade=Fade effect
 bootstrap4nt_tabs.type=Type
+bootstrap4nt_tabs.type.link=Link
 bootstrap4nt_tabs.type.pill=Pills
 bootstrap4nt_tabs.type.tab=Tabs
 bootstrap4nt_text=Text
