rollback links on tabs

--- a/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
+++ b/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
@@ -307,7 +307,7 @@ bootstrap4nt_tabs.align.nav-fill=Fill
 bootstrap4nt_tabs.align.nav-justified=Justified
 bootstrap4nt_tabs.fade=Fade effect
 bootstrap4nt_tabs.type=Type
-bootstrap4nt_tabs.type.link=Link
+bootstrap4nt_tabs.type.link=Links
 bootstrap4nt_tabs.type.pill=Pills
 bootstrap4nt_tabs.type.tab=Tabs
 bootstrap4nt_text=Text
