--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
     <artifactId>bootstrap4-modules</artifactId>
     <name>Bootstrap4 Modules</name>
     <packaging>pom</packaging>
-    <version>0.8</version>    
+    <version>0.9-SNAPSHOT</version>    
     <properties>
         <jahia.package.version>1.0</jahia.package.version>
     </properties>
@@ -62,7 +62,7 @@
         <connection>scm:git:git@github.com:Jahia/bootstrap4.git</connection>
         <developerConnection>scm:git:git@github.com:Jahia/bootstrap4.git</developerConnection>
         <url>https://github.com/Jahia/bootstrap4.git</url>
-      <tag>bootstrap4-modules-0.8</tag>
+      <tag>HEAD</tag>
   </scm>
     <repositories>
         <repository>
