Minor update on text colors

--- a/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
+++ b/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
@@ -110,6 +110,7 @@ bootstrap4mix_colors.textColor.dark=Dark
 bootstrap4mix_colors.textColor.default=Default
 bootstrap4mix_colors.textColor.info=Info
 bootstrap4mix_colors.textColor.light=Light
+bootstrap4mix_colors.textColor.muted=Muted
 bootstrap4mix_colors.textColor.primary=Primary
 bootstrap4mix_colors.textColor.secondary=Decondary
 bootstrap4mix_colors.textColor.success=Success
