Update core to v4.0.0-beta.3

--- a/bootstrap4-core/pom.xml
+++ b/bootstrap4-core/pom.xml
@@ -38,6 +38,7 @@ OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
   </scm>
   <properties>
     <jahia-depends>default,jquery,popperjs</jahia-depends>
+    <Jahia-Module-Priority>2</Jahia-Module-Priority>
   </properties>
   <repositories>
     <repository>
