--- a/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
+++ b/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
@@ -76,6 +76,7 @@ bootstrap4mix_carouselAdvancedSettings.carouselClass=Custom Class(es) to set the
 bootstrap4mix_carouselAdvancedSettings.interval=Delay between automatically cycling (ms)
 bootstrap4mix_carouselAdvancedSettings.keyboard=React to keyboard events
 bootstrap4mix_carouselAdvancedSettings.pause=Pauses the cycling on hover
+bootstrap4mix_carouselAdvancedSettings.fade=Crossfade
 bootstrap4mix_carouselAdvancedSettings.ride=Autoplays the carousel
 bootstrap4mix_carouselAdvancedSettings.useIndicators=Display indicators
 bootstrap4mix_carouselAdvancedSettings.useLeftAndRightControls=Display controls
