--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@ OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
     <artifactId>bootstrap4-modules</artifactId>
     <name>Bootstrap4 Modules</name>
     <packaging>pom</packaging>
-    <version>1.8</version>    
+    <version>1.9-SNAPSHOT</version>    
     <properties>
         <jahia.package.version>1.0</jahia.package.version>
     </properties>
@@ -36,7 +36,7 @@ OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
         <connection>scm:git:git@github.com:Jahia/bootstrap4.git</connection>
         <developerConnection>scm:git:git@github.com:Jahia/bootstrap4.git</developerConnection>
         <url>https://github.com/Jahia/bootstrap4.git</url>
-      <tag>bootstrap4-modules-1.8</tag>
+      <tag>HEAD</tag>
   </scm>
     <repositories>
         <repository>
