--- a/bootstrap4-components/pom.xml
+++ b/bootstrap4-components/pom.xml
@@ -27,14 +27,14 @@ OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
   </parent>
   <groupId>org.jahia.modules</groupId>
   <artifactId>bootstrap4-components</artifactId>
-  <version>1.12</version>
+  <version>1.13-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <name>bootstrap4-components</name>
   <description>This is the custom module (bootstrap4-components) for running on a Digital Experience Manager server.</description>
   <scm>
     <connection>scm:dummy:uri</connection>
     <developerConnection>scm:dummy:uri</developerConnection>
-    <tag>bootstrap4-modules-1.12</tag>
+    <tag>HEAD</tag>
   </scm>
   <properties>
     <Jahia-Module-Priority>1</Jahia-Module-Priority>
