Cleanup on Brand (on the navbar component)

--- a/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
+++ b/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
@@ -49,6 +49,7 @@ bootstrap4mix_borderRadius.borderRadius.rounded=Rounded
 bootstrap4mix_borderRadius.borderRadius=Border radius
 bootstrap4mix_brand.brandImage=Brand image
 bootstrap4mix_brand.brandText=Brand text
+bootstrap4mix_brand=Brand
 bootstrap4mix_buttonAdvancedSettings.block=Full width button
 bootstrap4mix_buttonAdvancedSettings.cssClass=Custom Class(es) to set on this button
 bootstrap4mix_buttonAdvancedSettings.outline=Outline
@@ -273,6 +274,8 @@ bootstrap4mix_predefinedGrid.grid.8_4=8 / 4
 bootstrap4mix_predefinedGrid.grid.9_3=9 / 3
 bootstrap4mix_predefinedGrid.grid=Select a predifined grid
 bootstrap4mix_predefinedGrid=Predefined
+bootstrap4mix_siteBrand.brandImage=Brand image
+bootstrap4mix_siteBrand.brandText=Brand text
 bootstrap4mix_siteBrand=Brand
 bootstrap4mix_text.text=Text
 bootstrap4mix_text=Text
