Add some missing html section elements

--- a/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
+++ b/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
@@ -156,8 +156,12 @@ bootstrap4mix_createSection.sectionCssClass=Class(es) set on this HTML element
 bootstrap4mix_createSection.sectionElement.article=article
 bootstrap4mix_createSection.sectionElement.aside=aside
 bootstrap4mix_createSection.sectionElement.div=div
+bootstrap4mix_createSection.sectionElement.figcaption=figcaption
+bootstrap4mix_createSection.sectionElement.figure=figure
 bootstrap4mix_createSection.sectionElement.footer=footer
 bootstrap4mix_createSection.sectionElement.header=header
+bootstrap4mix_createSection.sectionElement.hgroup=hgroup
+bootstrap4mix_createSection.sectionElement.main=main
 bootstrap4mix_createSection.sectionElement.nav=nav
 bootstrap4mix_createSection.sectionElement.section=section
 bootstrap4mix_createSection.sectionElement=Html element type
