Generate tabs with listname as default

--- a/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
+++ b/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
@@ -343,6 +343,7 @@ bootstrap4nt_tabs.type.link=Links
 bootstrap4nt_tabs.type.pill=Pills
 bootstrap4nt_tabs.type.tab=Tabs
 bootstrap4nt_tabs.type=Type
+bootstrap4nt_tabs.useListNameAsAnchor=User list name as anchor
 bootstrap4nt_tabs=Tabs and pills
 bootstrap4nt_text=Text
 jmix_renderable.j_view.basenav=Base nav (only display the UL part)
