--- a/bootstrap4-components/pom.xml
+++ b/bootstrap4-components/pom.xml
@@ -61,7 +61,9 @@ OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
         <artifactId>maven-bundle-plugin</artifactId>
         <extensions>true</extensions>
         <configuration>
-          <instructions />
+          <instructions>
+            <Export-Package>org.jahia.modules.bootstrap4</Export-Package>
+          </instructions>
         </configuration>
       </plugin>
     </plugins>
