--- a/bootstrap4-components/pom.xml
+++ b/bootstrap4-components/pom.xml
@@ -22,38 +22,17 @@ OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.jahia.modules</groupId>
-    <artifactId>jahia-modules</artifactId>
-    <version>7.2.0.1</version>
+    <artifactId>bootstrap4-modules</artifactId>
+    <version>1.16-SNAPSHOT</version>
   </parent>
-  <groupId>org.jahia.modules</groupId>
   <artifactId>bootstrap4-components</artifactId>
-  <version>1.16-SNAPSHOT</version>
   <packaging>bundle</packaging>
-  <name>bootstrap4-components</name>
-  <description>This is the custom module (bootstrap4-components) for running on a Digital Experience Manager server.</description>
-  <scm>
-    <connection>scm:dummy:uri</connection>
-    <developerConnection>scm:dummy:uri</developerConnection>
-    <tag>HEAD</tag>
-  </scm>
+  <name>Bootstrap 4 Components</name>
+  <description>This module provide a Bootstrap 4 implementation of http://getbootstrap.com for Jahia</description>
   <properties>
     <Jahia-Module-Priority>1</Jahia-Module-Priority>
     <jahia-depends>bootstrap4-core,default,jquery,popperjs</jahia-depends>
   </properties>
-  <repositories>
-    <repository>
-      <releases>
-        <enabled>true</enabled>
-        <updatePolicy>never</updatePolicy>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-      <id>jahia-public</id>
-      <name>Jahia Public Repository</name>
-      <url>https://devtools.jahia.com/nexus/content/groups/public</url>
-    </repository>
-  </repositories>
   <build>
     <plugins>
       <plugin>
