--- a/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
+++ b/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
@@ -39,14 +39,6 @@ bootstrap4mix_advancedPagination.next=Next
 bootstrap4mix_advancedPagination.pageSize=How many items are shown
 bootstrap4mix_advancedPagination.previous=Previous
 bootstrap4mix_advancedPagination=Advanced settings
-bootstrap4mix_borderRadius.borderRadius.rounded-0=No radius
-bootstrap4mix_borderRadius.borderRadius.rounded-bottom=Only on bottom
-bootstrap4mix_borderRadius.borderRadius.rounded-circle=Circle
-bootstrap4mix_borderRadius.borderRadius.rounded-left=Only on left
-bootstrap4mix_borderRadius.borderRadius.rounded-right=Only on right
-bootstrap4mix_borderRadius.borderRadius.rounded-top=Only on top
-bootstrap4mix_borderRadius.borderRadius.rounded=Rounded
-bootstrap4mix_borderRadius.borderRadius=Border radius
 bootstrap4mix_brand.brandImage=Brand image
 bootstrap4mix_brand.brandText=Brand text
 bootstrap4mix_brand=Brand
@@ -198,6 +190,14 @@ bootstrap4mix_imageAdvancedSettings.align.default=Default
 bootstrap4mix_imageAdvancedSettings.align.left=Left
 bootstrap4mix_imageAdvancedSettings.align.right=Right
 bootstrap4mix_imageAdvancedSettings.align=Alignment
+bootstrap4mix_imageAdvancedSettings.borderRadius.rounded-0=Default (No radius)
+bootstrap4mix_imageAdvancedSettings.borderRadius.rounded-bottom=Only on bottom
+bootstrap4mix_imageAdvancedSettings.borderRadius.rounded-circle=Circle
+bootstrap4mix_imageAdvancedSettings.borderRadius.rounded-left=Only on left
+bootstrap4mix_imageAdvancedSettings.borderRadius.rounded-right=Only on right
+bootstrap4mix_imageAdvancedSettings.borderRadius.rounded-top=Only on top
+bootstrap4mix_imageAdvancedSettings.borderRadius.rounded=Rounded
+bootstrap4mix_imageAdvancedSettings.borderRadius=Border radius
 bootstrap4mix_imageAdvancedSettings.imageClass=Class(es) to set on this image
 bootstrap4mix_imageAdvancedSettings.imageID=ID to set on this image
 bootstrap4mix_imageAdvancedSettings.imageStyle=Style(s) to set on this image
