--- a/bootstrap4-core/pom.xml
+++ b/bootstrap4-core/pom.xml
@@ -22,48 +22,15 @@ OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.jahia.modules</groupId>
-    <artifactId>jahia-modules</artifactId>
-    <version>7.2.0.1</version>
+    <artifactId>bootstrap4-modules</artifactId>
+    <version>1.16-SNAPSHOT</version>
   </parent>
-  <groupId>org.jahia.modules</groupId>
   <artifactId>bootstrap4-core</artifactId>
-  <version>1.16-SNAPSHOT</version>
   <packaging>bundle</packaging>
-  <name>bootstrap4-core</name>
-  <description>This is the custom module (bootstrap4-core) for running on a Digital Experience Manager server.</description>
-  <scm>
-    <connection>scm:dummy:uri</connection>
-    <developerConnection>scm:dummy:uri</developerConnection>
-    <tag>HEAD</tag>
-  </scm>
+  <name>Bootstrap 4 Core</name>
+  <description>This module provide the Bootstrap 4 assets for Jahia</description>
   <properties>
     <jahia-depends>default,jquery,popperjs</jahia-depends>
     <Jahia-Module-Priority>2</Jahia-Module-Priority>
   </properties>
-  <repositories>
-    <repository>
-      <releases>
-        <enabled>true</enabled>
-        <updatePolicy>never</updatePolicy>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-      <id>jahia-public</id>
-      <name>Jahia Public Repository</name>
-      <url>https://devtools.jahia.com/nexus/content/groups/public</url>
-    </repository>
-  </repositories>
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.felix</groupId>
-        <artifactId>maven-bundle-plugin</artifactId>
-        <extensions>true</extensions>
-        <configuration>
-          <instructions />
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
 </project>
