--- a/pom.xml
+++ b/pom.xml
@@ -22,11 +22,11 @@ OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
     <parent>
         <artifactId>jahia-modules</artifactId>
         <groupId>org.jahia.modules</groupId>
-        <version>7.2.0.1</version>
+        <version>7.3.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>bootstrap4-modules</artifactId>
-    <name>Bootstrap4 Modules</name>
+    <name>Bootstrap 4 Modules</name>
     <packaging>pom</packaging>
     <version>1.16-SNAPSHOT</version>
     <properties>
@@ -67,5 +67,6 @@ OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
     <modules>
         <module>bootstrap4-core</module>
         <module>bootstrap4-components</module>
+        <module>bootstrap4-package</module>
     </modules>
 </project>
