--- a/bootstrap4-package/pom.xml
+++ b/bootstrap4-package/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.jahia.modules</groupId>
         <artifactId>bootstrap4-modules</artifactId>
-        <version>1.16</version>
+        <version>1.17-SNAPSHOT</version>
     </parent>
     <artifactId>bootstrap4-package</artifactId>
     <name>Bootstrap 4 Package</name>
@@ -40,12 +40,12 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>bootstrap4-core</artifactId>
-            <version>1.16</version>
+            <version>1.17-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>bootstrap4-components</artifactId>
-            <version>1.16</version>
+            <version>1.17-SNAPSHOT</version>
         </dependency>
     </dependencies>
     <build>
