--- a/bootstrap4-package/pom.xml
+++ b/bootstrap4-package/pom.xml
@@ -2,12 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.jahia.modules</groupId>
-        <artifactId>bootstrap4-modules</artifactId>
-        <version>1.17-SNAPSHOT</version>
+        <artifactId>jahia-packages-parent</artifactId>
+        <groupId>org.jahia.packages</groupId>
+        <version>7.3.0.1</version>
     </parent>
     <artifactId>bootstrap4-package</artifactId>
     <name>Bootstrap 4 Package</name>
+    <version>1.16</version>
     <packaging>pom</packaging>
     <description>Parent project to package all Bootstrap 4 related components.</description>
     <properties>
@@ -40,12 +41,12 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>bootstrap4-core</artifactId>
-            <version>1.17-SNAPSHOT</version>
+            <version>1.16</version>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>bootstrap4-components</artifactId>
-            <version>1.17-SNAPSHOT</version>
+            <version>1.16</version>
         </dependency>
     </dependencies>
     <build>
