New property on card to add custom class New property on card allow any content on card footer

--- a/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
+++ b/bootstrap4-components/src/main/resources/resources/bootstrap4-components.properties
@@ -65,6 +65,9 @@ bootstrap4mix_buttonAdvancedSettings.style.success=Success
 bootstrap4mix_buttonAdvancedSettings.style.warning=Warning
 bootstrap4mix_buttonAdvancedSettings.style=Style
 bootstrap4mix_buttonAdvancedSettings=Advanced settings
+bootstrap4mix_cardAdvancedSettings.cssClass=Class(es) to set on this Card
+bootstrap4mix_cardAdvancedSettings.freeFooter=Allow any content on the footer
+bootstrap4mix_cardAdvancedSettings=Advanced settings
 bootstrap4mix_carouselAdvancedSettings.carouselClass=Custom Class(es) to set the carousel
 bootstrap4mix_carouselAdvancedSettings.fade=Crossfade
 bootstrap4mix_carouselAdvancedSettings.interval=Delay between automatically cycling (ms)
